--- a/package.json
+++ b/package.json
@@ -2,16 +2,29 @@
   "name": "api-subte",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/bundle.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "watch:build": "webpack --watch",
+    "serve": "nodemon \"./build/bundle.js\" --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "csv-parser": "^2.1.0",
+    "csv-parse": "^4.0.1",
     "express": "^4.16.4",
     "mongoose": "^5.3.14"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.2.0",
+    "@types/csv-parse": "^1.1.11",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.4",
+    "babel-preset-env": "^1.7.0",
+    "nodemon": "^1.18.7",
+    "webpack": "^4.27.0",
+    "webpack-cli": "^3.1.2"
   }
 }
