--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "csv-parse": "^4.0.1",
     "express": "^4.16.4",
     "mongoose": "^5.3.14",
