--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "watch:build": "webpack --watch",
-    "serve": "nodemon \"./build/bundle.js\" --watch"
+    "serve": "nodemon \"./build/bundle.js\" --watch",
+    "serve:simple": "nodemon ./src/main.js"
   },
   "keywords": [],
   "author": "",
